# HydraMind

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-19T03-30-35-926Z.yml  page-2026-06-19T03-56-02-024Z.yml
docs/architecture/: 00-overview.md  10-execution-harness.md  10-harness-backend.md  20-control-plane.md  30-gating.md  40-orchestration.md  50-memory-and-observability.md  60-queue-adapter.md  70-production-runtime.md  80-governance.md  90-decisions.md  95-execution-harness-correction.md  96-agent-layering-and-harness-synthesis.md
docs/operations/: env-and-live-smoke.md
docs/research/: RESEARCH-20260619-replaceable-harness.md
examples/agent_run_console/: README.md  __init__.py  render.py
examples/native_team/: README.md  generate_fixture.py  mock_fixture.json  run_scenario.sh  workflow.yaml
examples/short_video/: __init__.py  gates.py  main.py  prompts.yaml  workflow.yaml
scripts/: check_truth_surface.py  p0_acceptance.py  redis_live_acceptance.py  set_env_secrets.py
src/hydramind/: __init__.py  cli.py  cli_doctor.py  cli_doctor_goal_scenario.py  cli_doctor_tools.py  cli_parser.py  cli_queue.py  cli_runtime.py  cli_support.py  cli_trace.py  cli_worker_ops.py  cli_worker_support.py  runtime.py  runtime_bundle.py  runtime_control.py  runtime_execution.py  runtime_memory.py  runtime_queue.py  runtime_queue_goal.py  runtime_support.py  runtime_tools.py  runtime_verification.py  runtime_worker.py  runtime_worker_readiness.py  trace_console.py
tests/: __init__.py  test_cli_runtime.py  test_cli_trace.py  test_harness_hello_world.py  test_p0_acceptance_script.py  test_set_env_secrets_script.py  test_smoke.py  test_trace_console.py
tests/acceptance/: __init__.py  test_live_acceptance_runner.py  test_negative_acceptance.py
tests/contract/: public_api_snapshot.json  test_architecture_invariants.py  test_event_detail_schema.py  test_execution_contracts.py  test_openai_compatible_backend.py  test_protocol_outcomes.py  test_provider_contract.py  test_public_api_snapshot.py  test_truth_surface_guard.py
tests/control/: test_control_plane.py  test_durable_interaction.py  test_interaction_turn_lease.py  test_session_service.py  test_sqlite_session_store.py  test_states.py  test_task_contract_quality.py
tests/examples/: test_short_video_cli.py
tests/gating/: test_builtin_evaluators.py  test_gate_contract.py  test_integration_with_control_plane.py  test_verifier_feedback_evaluator.py
tests/governance/: test_release_evidence.py
tests/harness/: test_interaction_primitive.py
tests/integration/: __init__.py  test_memory_episode_wiring.py  test_multiround_trace_console.py
(+175 files in other folders)
